--- a/pom.xml
+++ b/pom.xml
@@ -14,30 +14,30 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-core</artifactId>
             <scope>provided</scope>
-            <version>999-SNAPSHOT</version>
+            <version>18.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-services</artifactId>
-            <version>999-SNAPSHOT</version>
+            <version>18.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi</artifactId>
-            <version>999-SNAPSHOT</version>
+            <version>18.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi-private</artifactId>
-            <version>999-SNAPSHOT</version>
+            <version>18.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-model-jpa</artifactId>
-            <version>999-SNAPSHOT</version>
+            <version>18.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
